--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!-- Open Graph para embeds -->
+<meta property="og:title" content="Você aceitaria o desafio do Ddakji? 💥">
+<meta property="og:description" content="Escolha seu cartão, jogue e descubra se você vai para os jogos... ou será eliminado.">
+<meta property="og:image" content="/images/smile.jpg"> <!-- coloque aqui o link completo da imagem -->
+<meta property="og:url" content="https://guisinnhd.github.io/rondonia6rmk/"> <!-- link completo do seu site -->
+<meta property="og:type" content="website">
+<meta property="og:locale" content="pt_BR">
   <link rel="stylesheet" href="styles/style.css"/>
   <link rel="shortcut icon" href="/pages/favicon.ico" type="image/x-icon">
   <title>Convite para os Jogos</title>
